--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.6",
+    "@types/tailwindcss": "^3.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "tailwind": "^4.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -31,7 +33,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "supabase": "^1.150.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
 }
