--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.6",
     "@types/tailwindcss": "^3.1.0",
+    "eslint-plugin-tailwind": "^0.2.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
